@@ -64,3 +64,21 @@ AC_ARG_ENABLE(gconftest, [  --disable-gconftest       Do not try to compile and 
   AC_SUBST(GCONF_LIBS)
   rm -f conf.gconftest
 ])
+
+dnl AM_PATH_GCONF
+dnl Define GCONF_SCHEMA_CONFIG_SOURCE
+dnl
+AC_DEFUN(AM_GCONF_SOURCE,
+[
+if test "x$GCONF_SCHEMA_INSTALL_SOURCE" = "x"; then
+  GCONF_SCHEMA_CONFIG_SOURCE=`gconftool --get-default-source`
+else
+  GCONF_SCHEMA_CONFIG_SOURCE=$GCONF_SCHEMA_INSTALL_SOURCE
+fi
+
+AC_ARG_WITH(gconf-source, 
+[  --with-gconf-source=sourceaddress      Where to install schema files.],GCONF_SCHEMA_CONFIG_SOURCE="$withval",)
+
+  AC_SUBST(GCONF_SCHEMA_CONFIG_SOURCE)
+  AC_MSG_RESULT("Using config source $GCONF_SCHEMA_CONFIG_SOURCE for schema installation")
+])
